--- a/force-app/main/default/lwc/rv_dealentryview/rv_dealentryview.html
+++ b/force-app/main/default/lwc/rv_dealentryview/rv_dealentryview.html
@@ -303,7 +303,7 @@
                                 </lightning-textarea>
                             </td>
                             <td data-label="Action">
-                                <lightning-button label="Cancel" name="Cancel" data-recid ={mrc.shtRecordId} onclick={cancelSavedSHTDeal}
+                                <lightning-button label="Cancel" name="Cancel" data-recid ={mrc.shtRecordId} variant="destructive" onclick={cancelSavedSHTDeal}
                                 disabled={confirmCancelDisable}></lightning-button>
                             </td>
 
