PBI-1659185 retry button components

--- a/force-app/main/default/lwc/rv_Termtrigger/rv_Termtrigger.html
+++ b/force-app/main/default/lwc/rv_Termtrigger/rv_Termtrigger.html
@@ -147,7 +147,7 @@
                                                     <td data-label="mrcNum"  style="background-color: var(--lwc-paletteYellow90);font-weight:bold;">{cmPlant.mrcNum}-{cmPlant.mrcContract_Description}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td data-label="mrcNum" rowspan={cmPlant.rowspan}>{cmPlant.mrcNum}-{cmPlant.mrcLineItem}</td>
+                                                    <td data-label="mrcNum" rowspan={cmPlant.rowspan}>{cmPlant.mrcNum}</td>
                                                     <td data-label="PlantName" rowspan={cmPlant.rowspan}>{cmPlant.location}</td>
                                                     <td data-label="PlantId" rowspan={cmPlant.rowspan}>{cmPlant.locationCode}</td>
 
