bug-1658091 confirm button fix

--- a/force-app/main/default/lwc/rv_dealentryview/rv_dealentryview.html
+++ b/force-app/main/default/lwc/rv_dealentryview/rv_dealentryview.html
@@ -316,9 +316,9 @@
         </div>
     </lightning-layout-item>
     <lightning-layout>
-        <lightning-layout-item padding="around-small" size="8"></lightning-layout-item>
-        <lightning-layout-item padding="around-small" size="3"></lightning-layout-item>
-        <lightning-layout-item padding="around-small" size="1">
+        <lightning-layout-item padding="around-small" size="11"></lightning-layout-item>
+        <!--lightning-layout-item padding="around-small" size="3"></lightning-layout-item-->
+        <lightning-layout-item  size="1">
             <lightning-button label="Confirm" name="Confirm Deals" onclick={confirmSavedDeals} variant="brand" style="display: flex;justify-content: flex-end;"
             disabled={confirmCancelDisable}></lightning-button>
         </lightning-layout-item>
