--- a/force-app/main/default/lwc/rv_customerNotes/rv_customerNotes.html
+++ b/force-app/main/default/lwc/rv_customerNotes/rv_customerNotes.html
@@ -91,7 +91,7 @@
                                     alternative-text="Delete">
                             </lightning-button-icon>
 
-                            <header class="slds-text-title_bold font-size:6 slds-text-color_weak text-transform text-align slds-text-body_small" key={note.Id} >
+                            <header class="slds-text-color_weak slds-grid_align-spread" style="font-size:0.6vw" key={note.Id} >
                                 {note.CreatedBy.Name}
                                 (
                                 <lightning-formatted-date-time value={note.CreatedDate} year="numeric" month="numeric" day="numeric" 
@@ -101,7 +101,7 @@
 
 
 
-                            <p class="slds-text-color_weak slds-grid_align-spread" key={note.Id}>{note.Body}</p>
+                            <p class="slds-text-title_bold font-size:12 slds-text-color_weak text-transform text-align slds-text-body_small" style="font-size:0.8vw" key={note.Id}><b>{note.Body}</b></p>
                         </div>
                     </template>
                 </template>
