--- a/force-app/main/default/lwc/rv_diCustomerFilterSection/rv_diCustomerFilterSection.html
+++ b/force-app/main/default/lwc/rv_diCustomerFilterSection/rv_diCustomerFilterSection.html
@@ -304,6 +304,7 @@
                         if:true={depotOptions} 
                         options={depotOptions}
                         values={depotSelectedVal}
+                        cname={cname}
                         onvaluechange={handleDepotValueChange} 
                         >
                     </c-rv_multiselectdropdown>
