--- a/force-app/main/default/lwc/rv_priceMarket/rv_priceMarket.html
+++ b/force-app/main/default/lwc/rv_priceMarket/rv_priceMarket.html
@@ -92,7 +92,7 @@
                                     </td>
                              </tr>
                              <template for:each={mrc.plants} for:item="cmPlant" for:index="pIndex"> 
-                                <tbody class="bgGrey" data-plant = {cmPlant.location} key = {cmPlant.location}>
+                                    <tbody class={cmPlant.rowbgColor} data-plant={cmPlant.location} key={cmPlant.location}>
                                 <tr>
                                  <td data-label="PlantName" rowspan = {cmPlant.rowspan} >{cmPlant.location}</td>
                                  <td data-label="PlantId" rowspan = {cmPlant.rowspan}  >{cmPlant.locationId}</td>
