--- a/force-app/main/default/lwc/reCndModalPopUp/reCndModalPopUp.html
+++ b/force-app/main/default/lwc/reCndModalPopUp/reCndModalPopUp.html
@@ -120,7 +120,7 @@
                     <template if:true={showMailList}>
     
                         <lightning-radio-group name="radioGroup"
-                            label="Receipient Type"
+                            label="Recipient Type"
                             variant ="label-inline"
                             options={emailReceiver}
                             value={emailReceierValue}
